# wanyi-watermark

./: .gitignore  CLAUDE.md  README.md  UPSTREAM_SYNC.md  pyproject.toml
tests/: test_media_fetch.py
wanyi-watermark-skill/: SKILL.md
wanyi-watermark-skill/scripts/: media_cli.py
wanyi_watermark/: __init__.py  cli.py  diagnostics.py  douyin_processor.py  generic_extractor.py  media_fetch.py  resolver.py  server.py  siliconflow_asr.py  transcription.py  xiaohongshu_processor.py
web/: app.py
web/static/: app.js  styles.css
web/templates/: index.html
