[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wanyi-watermark"
version = "1.1.0"
description = "百分百一键去水印 - 视频链接解析与媒体资源提取MCP服务器，支持抖音/小红书/通用平台，附 CLI / WebUI / Skill 三种交付渠道"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "wanyi", email = "2368077712@qq.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "requests",
    "ffmpeg-python",
    "tqdm",
    "dashscope",
    # WebUI（web/app.py）所需；MCP / CLI 链路不强制依赖，但作为统一发行一并声明
    "fastapi",
    "uvicorn",
    "jinja2",
]

[project.urls]
Homepage = "https://github.com/Ryan7t/wanyi-watermark"
Repository = "https://github.com/Ryan7t/wanyi-watermark"
Issues = "https://github.com/Ryan7t/wanyi-watermark/issues"

[project.scripts]
wanyi-watermark = "wanyi_watermark.server:main"
wanyi-watermark-cli = "wanyi_watermark.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["wanyi_watermark"]
